# rust-evo

./: .gitignore  Cargo.toml  README.md
evo_conrod/: Cargo.toml
evo_conrod/src/: lib.rs
evo_conrod/src/support/: mod.rs
evo_domain/: Cargo.toml
evo_domain/evo_domain_derive/: Cargo.toml
evo_domain/src/: biology.rs  environment.rs  lib.rs  physics.rs  world.rs
evo_domain/src/biology/: cell.rs  (+6 more)
evo_glium/: Cargo.toml
evo_glium/src/: background_drawing.rs  bond_drawing.rs  bullseye_drawing.rs  cell_drawing.rs  cloud_drawing.rs  lib.rs
evo_main/: Cargo.toml
evo_main/examples/: angle_of_reflection.rs  ball_and_cloud.rs  ball_chain.rs  ball_drag.rs  big_and_little.rs  bobbing_ball.rs  bobbing_cell.rs  bond_cycle_3.rs  bond_cycle_5.rs  bonded_pair.rs  bonded_triple.rs  bouncing_balls.rs  bouncing_pairs.rs  budding.rs  collision_test.rs  damage_healing_and_death.rs  death_by_wall_bounces.rs  decay_and_healing.rs  decay_healing_and_death.rs  decay_sink_burst.rs  diagonal triple.rs  diagonal_triple.rs  double_overlap.rs  duckweed.rs  falling_ball.rs  fixed_depth_seeking.rs  floating_ball.rs  frozen_links.rs  inset_walls.rs  many_balls.rs  neural_net_budding.rs  neural_net_duckweed.rs  neural_net_fixed_depth_seeking.rs  simple_neural_net.rs  soft_inset_walls.rs  three_balls.rs  thrust_in_square.rs
evo_main/src/: lib.rs  main.rs  main_support.rs  mvvm.rs  view.rs
evo_model/: Cargo.toml
evo_model/evo_model_derive/: Cargo.toml
evo_model/src/: influences.rs  lib.rs  world.rs
evo_view_model/: Cargo.toml
evo_view_model/src/: events.rs  lib.rs
src/: main.rs
(+46 files in other folders)
