[package]
name = "evo_conrod"
version = "0.1.0"
authors = ["Franz Amador <franzamador@gmail.com>"]

[dependencies]
evo_model = { path = "../evo_model" }
evo_view_model = { path = "../evo_view_model" }
conrod = "0.60.0"
find_folder = "0.3.0"
rand = "0.5"

[features]
default = [ "glium", "winit" ]
glium = ["conrod/glium"]
winit = ["conrod/winit"]
